infra/new/certificate-signer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: certificate-signer
  name: certificate-signer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: certificate-signer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sunbird-rc-core-default: "true"
        io.kompose.service: certificate-signer
    spec:
      containers:
        - env:
            - name: PORT
              value: "8079"
          image: dockerhub/sunbird-rc-certificate-signer:${RELEASE_VERSION}
          livenessProbe:
            exec:
              command:
                - curl -f http://localhost:8079/health || exit 1
            failureThreshold: 10
            periodSeconds: 30
            timeoutSeconds: 10
          name: certificate-signer
          ports:
            - containerPort: 8079
          resources: {}
          volumeMounts:
            - mountPath: /etc/signer
              name: certificate-signer-claim0
      restartPolicy: Always
      volumes:
        - name: certificate-signer-claim0
          persistentVolumeClaim:
            claimName: certificate-signer-claim0
status: {}
