infra/new/claim-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: claim-ms
  name: claim-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: claim-ms
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sunbird-rc-core-default: "true"
        io.kompose.service: claim-ms
    spec:
      containers:
        - env:
            - name: connectionInfo_password
              value: postgres
            - name: connectionInfo_uri
              value: jdbc:postgresql://db:5432/registry
            - name: connectionInfo_username
              value: postgres
            - name: sunbirdrc_url
              value: http://registry:8081
          image: dockerhub/sunbird-rc-claim-ms:${RELEASE_VERSION}
          livenessProbe:
            exec:
              command:
                - wget -nv -t1 --spider http://localhost:8082/health || exit 1
            failureThreshold: 10
            periodSeconds: 30
            timeoutSeconds: 10
          name: claim-ms
          ports:
            - containerPort: 8082
          resources: {}
      restartPolicy: Always
status: {}
