infra/new/context-proxy-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: context-proxy-service
  name: context-proxy-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: context-proxy-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sunbird-rc-core-default: "true"
        io.kompose.service: context-proxy-service
    spec:
      containers:
        - image: dockerhub/sunbird-rc-context-proxy-service
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - localhost:4400/health
            failureThreshold: 10
            periodSeconds: 30
            timeoutSeconds: 10
          name: context-proxy-service
          ports:
            - containerPort: 4400
          resources: {}
      restartPolicy: Always
status: {}
