infra/new/es-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: es
  name: es
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: es
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sunbird-rc-core-default: "true"
        io.kompose.service: es
    spec:
      containers:
        - env:
            - name: ELASTIC_PASSWORD
              value: ${ELASTIC_SEARCH_PASSWORD}
            - name: ES_JAVA_OPTS
              value: -Xms512m -Xmx512m
            - name: discovery.type
              value: single-node
            - name: xpack.security.enabled
              value: ${ELASTIC_SECURITY_ENABLED-false}
          image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - localhost:9200/_cluster/health
                - --header
                - 'Authorization: Basic ZWxhc3RpYzpEa0llZFBQU0Ni'
            failureThreshold: 4
            periodSeconds: 30
            timeoutSeconds: 10
          name: es
          ports:
            - containerPort: 9200
            - containerPort: 9300
          resources: {}
      restartPolicy: Always
status: {}
