infra/new/file-storage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: file-storage
  name: file-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: file-storage
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sunbird-rc-core-default: "true"
        io.kompose.service: file-storage
    spec:
      containers:
        - args:
            - server
            - --address
            - 0.0.0.0:9000
            - --console-address
            - 0.0.0.0:9001
            - /data
          image: quay.io/minio/minio
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9000/minio/health/live
            failureThreshold: 10
            periodSeconds: 30
            timeoutSeconds: 20
          name: file-storage
          ports:
            - containerPort: 9000
            - containerPort: 9001
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: file-storage-claim0
      restartPolicy: Always
      volumes:
        - name: file-storage-claim0
          persistentVolumeClaim:
            claimName: file-storage-claim0
status: {}
