infra/new/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sunbird-rc-core-default: "true"
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: DB_ADDR
              value: db
            - name: DB_DATABASE
              value: registry
            - name: DB_PASSWORD
              value: postgres
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: postgres
            - name: DB_VENDOR
              value: postgres
            - name: KEYCLOAK_IMPORT
              value: /opt/jboss/keycloak/imports/realm-export.json
            - name: KEYCLOAK_LOGO
              value: https://svgshare.com/i/hCs.svg
            - name: KEYCLOAK_PASSWORD
              value: ${KEYCLOAK_ADMIN_PASSWORD-admin}
            - name: KEYCLOAK_USER
              value: ${KEYCLOAK_ADMIN_USER-admin}
            - name: PROXY_ADDRESS_FORWARDING
              value: "true"
          image: dockerhub/sunbird-rc-keycloak:latest
          livenessProbe:
            exec:
              command:
                - curl -f http://localhost:9990/ || exit 1
            failureThreshold: 10
            periodSeconds: 30
            timeoutSeconds: 10
          name: keycloak
          ports:
            - containerPort: 8080
            - containerPort: 9990
          resources: {}
          volumeMounts:
            - mountPath: /opt/jboss/keycloak/imports
              name: keycloak-claim0
      restartPolicy: Always
      volumes:
        - name: keycloak-claim0
          persistentVolumeClaim:
            claimName: keycloak-claim0
status: {}
