infra/new/public-key-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: public-key-service
  name: public-key-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: public-key-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../../docker-compose.yml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sunbird-rc-core-default: "true"
        io.kompose.service: public-key-service
    spec:
      containers:
        - env:
            - name: CONFIG_BASE_PATH
              value: /etc/keys
          image: dockerhub/sunbird-rc-public-key-service
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - localhost:3300/public-key-service/api/v1/health
            failureThreshold: 10
            periodSeconds: 30
            timeoutSeconds: 10
          name: public-key-service
          ports:
            - containerPort: 3300
          resources: {}
          volumeMounts:
            - mountPath: /etc/keys
              name: public-key-service-claim0
      restartPolicy: Always
      volumes:
        - name: public-key-service-claim0
          persistentVolumeClaim:
            claimName: public-key-service-claim0
status: {}
