infra/new/certificate-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: certificate-api
  name: certificate-api
spec:
  ports:
    - name: "8078"
      port: 8078
      targetPort: 8078
  selector:
    io.kompose.service: certificate-api
status:
  loadBalancer: {}
