infra/new/certificate-signer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: certificate-signer
  name: certificate-signer
spec:
  ports:
    - name: "8079"
      port: 8079
      targetPort: 8079
  selector:
    io.kompose.service: certificate-signer
status:
  loadBalancer: {}
