infra/new/context-proxy-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: context-proxy-service
  name: context-proxy-service
spec:
  ports:
    - name: "4400"
      port: 4400
      targetPort: 4400
  selector:
    io.kompose.service: context-proxy-service
status:
  loadBalancer: {}
