infra/new/notification-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: notification-ms
  name: notification-ms
spec:
  ports:
    - name: "8765"
      port: 8765
      targetPort: 8765
  selector:
    io.kompose.service: notification-ms
status:
  loadBalancer: {}
