infra/new/public-key-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: public-key-service
  name: public-key-service
spec:
  ports:
    - name: "3300"
      port: 3300
      targetPort: 3300
  selector:
    io.kompose.service: public-key-service
status:
  loadBalancer: {}
